  defining application wide custom baseclasses for nodes and modules. [Ivo]
+ Added atkConfig::get() for retrieving config values by section. Variables
  can be defined as $config["value"] in configs/<section>.inc.php files. [Ivo]
+ $config values can now be redirected to a runtime function by defining
  a function called config_<configkey>() or config_<modname>_<configkey>() for
  modules. [Ivo]
+ Debug output now includes memory usage information and elapsed time between
  two atkdebug calls. [Ivo]
+ Added setWidth() and getWidth() function to atkListAttribute to set the
  width of dropdown list in pixels. [Boy]
* Fixed a bug in the paging feature of an o2m relation. A selectDb always returned
  a maximum records of config_recordsperpage. [Martin] 
* Layout improvements on the o2m embedded add form. [Martin]
* Fixed menuitem translations for the outlook and plain menu. [Martin]
* ATK now has a smaller memory footprint and less overhead, due to cleanup 
  of includes. [Peter, Boy, Ivo]
* Changing the gui language through the url should now be done using ?atklng
  instead of ?lng. [Ivo]
* Fixed al lot of PHP notices (error_reporting set to E_ALL). [Martin]
* Fixed mlsplitter::getInstance wich always created a new instance. [Martin]
* Fixed atkonetoonerelation::load() wich didn't set the
   destination filter when using master mode. [Martin]
* Fixed possible sql injection in db authentication. [Ivo]
* atkmlsplitter::addmlcondition() is now recursive to support relations
  with multiple mlnodes. [Martin]
* Added include/exclude lists as param for addmlcondition(). [Sandy]
* Improvements to atkImportHandler:
  * Some functional decomposition applied.
  * Updated documentation.
  * Improved error handling, import documents are validated before 
    they are added. 
  * Fixed bug that would cause first field never to be properly recognized
    at analysis time. [Boy]
* Currency attribute no longer formats the number as a decimal as 